# CodeAnalyzer

./: .gitignore  LICENSE  README.md  codeAnalyzer.cabal  conversionToFOASL.cabal  conversionToFOSL.cabal  default.nix  shell.nix  stack.yaml
src/: Converter.hs  Main.hs
src/FOASL/: Converter.hs
src/FirstOrderLogic/: Parser.hs  Syntax.hs
src/HoareLogic/: Parser.hs  Structure.hs
src/SBV/: FormulaeToSBV.hs  Parser.hs
src/WeakestPrecondition/: Syntax.hs
test/: ConverterSpec.hs  doctest-driver.hs
test/FirstOrderLogic/: ParserSpec.hs
testFiles/: IfThen  Sequence  SimpleWhile
