name:                codeAnalyzer

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Pfalzgraf
maintainer:          pfalzgraf@drmartin.com
category:            Testing
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  
cabal-version:       >=1.10

executable codeAnalyzer
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  other-modules:       FirstOrderLogic.Parser
                     , FirstOrderLogic.Syntax
                     , HoareLogic.Parser
                     , HoareLogic.Structure
                     , SBV.FormulaeToSBV
                     , WeakestPrecondition.Syntax

  build-depends:       base
                     , text
                     , turtle
                     , foldl
                     , system-filepath
                     , text-show
                     , trifecta
                     , containers
                     , sbv
                     , lens
                     , unordered-containers
                     , mtl
                     , parsers
                     , transformers
                     , codeAnalyzer
                     , ansi-wl-pprint

  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

library
  exposed-modules:     FOASL.Converter
                     , FirstOrderLogic.Syntax
                     , FirstOrderLogic.Parser
                     , HoareLogic.Parser
                     , SBV.FormulaeToSBV
                     , HoareLogic.Structure
                     , WeakestPrecondition.Syntax 

  build-depends:       base
                     , text
                     , turtle
                     , foldl
                     , system-filepath
                     , text-show
                     , trifecta
                     , containers
                     , sbv
                     , lens
                     , unordered-containers
                     , mtl
                     , parsers
                     , transformers
                     , ansi-wl-pprint

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest-driver.hs
  build-depends:       base
                     , doctest

  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , codeAnalyzer
                     , hspec
                     , QuickCheck
                     , trifecta
                     , ansi-wl-pprint

  other-modules:       FirstOrderLogic.ParserSpec

  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
