name:                conversionToFOASL

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Pfalzgraf
maintainer:          pfalzgraf@drmartin.com
category:            Testing
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  
cabal-version:       >=1.10


library
  exposed-modules:     FOASL.Converter

  other-modules:       FirstOrderLogic.Parser
                     , FirstOrderLogic.Syntax
                     , SBV.Parser
                     , SBV.FormulaeToSBV
                     , HoareLogic.Structure
                     , HoareLogic.Parser
                     , WeakestPrecondition.Syntax 

  build-depends:       base >=4.8 && <4.9
                     , text >=1.1.0.0
                     , turtle == 1.*
                     , transformers == 0.4.*
                     , foldl == 1.*
                     , system-filepath == 0.4.*
                     , text-show == 3.*
                     , trifecta == 1.5.*
                     , containers >=0.5 && <0.6
                     , sbv == 5.*
                     , lens == 4.*
                     , unordered-containers == 0.2.*
                     , mtl == 2.*
                     , parsers == 0.12.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest-driver.hs
  build-depends:       base >=4.8 && <4.9 
                     , doctest

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
