name:                conversionToFOASL

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Pfalzgraf
maintainer:          pfalzgraf@drmartin.com
category:            Testing
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  
cabal-version:       >=1.10

executable codeAnalyzer
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  other-modules:       FirstOrderLogic.Parser
                     , FirstOrderLogic.Syntax
                     , HoareLogic.Parser
                     , HoareLogic.Structure
                     , SBV.FormulaeToSBV
                     , WeakestPrecondition.Syntax

  build-depends:       base >=4.8 && <4.9
                     , text >=1.1.0.0
                     , turtle == 1.*
                     , foldl == 1.*
                     , system-filepath == 0.4.*
                     , text-show == 3.*
                     , trifecta == 1.5.*
                     , containers >=0.5 && <0.6
                     , sbv == 5.*
                     , lens == 4.*
                     , unordered-containers == 0.2.*
                     , mtl == 2.*
                     , parsers == 0.12.*
                     , transformers == 0.4.*
                     , conversionToFOASL
                     , ansi-wl-pprint

  default-language:    Haskell2010

library
  exposed-modules:     FOASL.Converter
                     , FirstOrderLogic.Syntax
                     , FirstOrderLogic.Parser
                     , HoareLogic.Parser
                     , SBV.FormulaeToSBV
                     , HoareLogic.Structure
                     , WeakestPrecondition.Syntax 

  build-depends:       base >=4.8 && <4.9
                     , text >=1.1.0.0
                     , turtle == 1.*
                     , foldl == 1.*
                     , system-filepath == 0.4.*
                     , text-show == 3.*
                     , trifecta == 1.5.*
                     , containers >=0.5 && <0.6
                     , sbv == 5.*
                     , lens == 4.*
                     , unordered-containers == 0.2.*
                     , mtl == 2.*
                     , parsers == 0.12.*
                     , transformers == 0.4.*
                     , ansi-wl-pprint

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest-driver.hs
  build-depends:       base >=4.8 && <4.9 
                     , doctest

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.8 && <4.9 
                     , conversionToFOASL
                     , hspec == 2.2.*
                     , QuickCheck == 2.*

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
